--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filte>
         </activity>
+        <activity android:name=".activity.WeatherActivity"></activity>
     </application>
 
 </manifest>
