新增后台自动更新天气的功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
             </intent-filte>
         </activity>
         <activity android:name=".activity.WeatherActivity"></activity>
+        <service android:name=".service.AutoUpdateWeatherService"></service>
+        <receiver android:name=".receiver.AutoUpdateWeatherReceiver"></receiver>
     </application>
 
 </manifest>
