--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
-    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
+    <application android:allowBackup="true" android:icon="@mipmap/icon_weather"
         android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme">
         <activity android:name="com.android.coolweather.activity.ChooseAreaActivity"
             android:label="@string/app_name">
