--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest package="com.android.coolweather"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application android:allowBackup="true" android:icon="@mipmap/icon_weather"
         android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme">
         <activity android:name="com.android.coolweather.activity.ChooseAreaActivity"
