--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,17 +2,16 @@
 <manifest package="com.android.coolweather"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application android:allowBackup="true" android:icon="@mipmap/icon_weather"
         android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme">
-        <activity android:name="com.android.coolweather.activity.ChooseAreaActivity"
+        <activity android:name=".activity.LoginActivity"
             android:label="@string/app_name">
-            <intent-filte>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <action android:name="com.android.coolweather.activity.ChooseAreaActivity"></action>
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filte>
+            </intent-filter>
         </activity>
+        <activity android:name=".activity.ChooseAreaActivity"></activity>
         <activity android:name=".activity.WeatherActivity"></activity>
         <service android:name=".service.AutoUpdateWeatherService"></service>
         <receiver android:name=".receiver.AutoUpdateWeatherReceiver"></receiver>
